--- a/static/templates/addRestaurant.htm
+++ b/static/templates/addRestaurant.htm
@@ -1,8 +1,10 @@
 {% include "header.htm" %}
 	<div class="container">
-		<div class="col-md-8 col-md-offset-2">
-			<form class="form-action" method="POST" enctype="multipart/form-data" action="/add">
-				<input type="form-control" name="name">
+		<div class="col-md-8 col-md-offset-2 text-center">
+			<h2>Add a Restaurant</h2><br>
+			<form class="form-action" method="POST" enctype="multipart/form-data" action="/addRestaurant">
+				<label for="name">Restaurant name:</label><br>
+				<input type="form-control" name="name" placeholder="Name"><br><br>
 				<input type="submit" class="btn btn-success" value="Submit">
 			</form>
 		</div>
