--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,6 +5,13 @@
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1 text-center">
 			<h2>{{restaurant.name}}</h2>
+			{% with messages = get_flashed_messages() %}
+			{% if messages %}
+					{% for message in messages %}
+						<div class="alert alert-success"><strong>{{message}}</strong></div>
+					{% endfor %}
+			{% endif %}
+			{% endwith %}
 			<p><a href='{{ url_for('newMenuItem', restaurant_id = restaurant.id) }}'>Add Item</a></p>
 			{% for i in items %}
 				<div style="width: 95%; display: inline-block; padding: 1em; border: 1px solid black; border-radius: 4px; margin: 1em 0em 1em 0em">
