--- a/templates/header.html
+++ b/templates/header.html
@@ -17,13 +17,13 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="/restaurants">Restaurants</a>
+		      <a class="navbar-brand" href="{{ url_for('allRestaurants') }}">Restaurants</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-						<li><a href="/addRestaurant"><i class="glyphicon glyphicon-plus"></i> Restaurant</a></li>
+						<li><a href='{{ url_for('allRestaurants') }}'><i class="glyphicon glyphicon-plus"></i> Restaurant</a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
