added new fields

--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -7,6 +7,12 @@
 			<form method="POST" enctype="multipart/form-data" action='{{ url_for('editMenuItems', restaurant_id = restaurant_id, menu_id = menu_id) }}'>
 				<label for="name">Item name:</label><br>
 				<input class="form-control" name="name" placeholder="{{item.name}}"><br>
+				<label for="course">Course name:</label><br>
+				<input class="form-control" name="course" placeholder="{{item.course}}"><br>
+				<label for="price">Price:</label><br>
+				<input class="form-control" name="price" placeholder="{{item.price}}"><br>
+				<label for="description">Description:</label><br>
+				<input class="form-control" name="description" placeholder="{{item.description}}"><br>
 				<input type="submit" class="btn btn-success" value="Create">&nbsp;
 				<a class="btn btn-default" href='{{ url_for('restaurantMenu', restaurant_id = restaurant_id) }}'>Cancel</a>
 			</form>
