--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -7,7 +7,14 @@
 			<form method="POST" enctype="multipart/form-data" action='{{ url_for('newMenuItem', restaurant_id = restaurant_id) }}'>
 				<label for="name">Item name:</label><br>
 				<input class="form-control" name="name"><br>
-				<input type="submit" class="btn btn-success" value="Create">
+				<label for="course">Course name:</label><br>
+				<input class="form-control" name="course" placeholder="eg. Appetizer, Entree, Dessert"><br>
+				<label for="price">Price:</label><br>
+				<input class="form-control" name="price" placeholder="eg. 4.99"><br>
+				<label for="description">Description:</label><br>
+				<input class="form-control" name="description"><br>
+				<input type="submit" class="btn btn-success" value="Create">&nbsp;
+				<a class="btn btn-default" href="{{ url_for('restaurantMenu', restaurant_id = restaurant_id) }}">Cancel</a>
 			</form>
 		</div>
 	</div>
